# SaveBreaker

./: .gitignore  Cargo.toml  README.md  justfile  mise.toml  run.sh
.github/workflows/: rust.yml
analyze/: Cargo.toml
codecs/: Cargo.toml
codecs/src/: base64.rs
core/: Cargo.toml
core/src/: filetype.rs  lib.rs  types.rs
io/: Cargo.toml
io/src/: read.rs
savebreaker/: Cargo.toml
savebreaker/src/cli/: mod.rs  mod.rs.old  repl.rs
src/: main.rs
src/analyze/: entropy.rs
src/cli/: mod.rs  repl.rs
src/core/: types.rs
src/io/: mod.rs  read.rs
testdata/: testSave.txt
